--- a/practice-css/browser-intro.css
+++ b/practice-css/browser-intro.css
@@ -3,25 +3,35 @@ p {
 }
 
 p.info {
-	font-size: 10pt;
+	font-size: small;
+	background-color:#dfdfdf;
+}
+h1{
+	color:white;
+	text-shadow:0px 0px 10px navy;
 }
 
-h1 {
-	background-color: #7f7fcf;
-}
+
 
 h2 {
-	border: solid 1px black;
+	
+	background:linear-gradient(white, #ffefaf );
+	font-family:cursive;
+	color:#3f3faf;
 	margin: 5px;
 }
 
 div#zentai {
-	display: flex;
-	flex-direction: row;
-	width: 1024px;
+	display:grid ;/*グリッドレイアウトにする(横並び)*/
+	grid-template-columns: 1fr 1fr; /*2列1：１*/
+	grid-gap: 10px; 
+	grid-auto-rows: 200px ; 
 }
 
 div#zentai > div {
-	margin-left: 5px;
+	padding: 5px;
 	background-color: #ffefaf;
+}
+img{
+	float: right;
 }
