--- a/style.css
+++ b/style.css
@@ -1,9 +1,22 @@
 h1 {
-    color:rgb(65, 66, 65);
-    background: linear-gradient(transparent 60%, #9f90f5 70%);
+    color:rgb(255, 255, 255);
+    position: relative;
+    padding: 0.25em 0;
+    font-style: oblique;
+  }
+h1 {
+    position: relative;
+    padding: 0.25em 0;
+  }
+  h1:after {
+    content: "";
+    display: block;
+    height: 4px;
+    background: -webkit-linear-gradient(to right, rgb(213, 152, 228), transparent);
+    background: linear-gradient(to right, rgb(213, 174, 219), transparent);
   }
 p{
-    color:#673b7b
+    color:#ffffff
 }
 div{
     display:grid ;
@@ -12,7 +25,23 @@ div{
 }
 h2 {
     padding: 0.5em;/*文字周りの余白*/
-    color: #494949;/*文字色*/
+    color: #000000;/*文字色*/
     background: #d6c5db;/*背景色*/
     border-left: solid 5px #903ba5;/*左線（実線 太さ 色）*/
+  }
+  h3 {
+    color: #ffffff;
+  }
+  .box5 {
+    padding: 0.5em 1em;
+    margin: 2em 0;
+    border: double 5px #4ec4d3;
+}
+.box5 p {
+    margin: 0; 
+    padding: 0;
+}
+
+  body{
+    background-color: rgb(52, 86, 52);
   }
