--- a/style.css
+++ b/style.css
@@ -35,7 +35,7 @@ h2 {
   .box5 {
     padding: 0.5em 1em;
     margin: 2em 0;
-    border: double 5px #4ec4d3;
+    border: double 5px #d37ee7;
 }
 .box5 p {
     margin: 0; 
